--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,7 @@
+2015-01-29  Daiki Ueno  <ueno@gnu.org>
+
+	* msgexec.texi: Document --newline option.
+
 2015-01-28  Daiki Ueno  <ueno@gnu.org>
 
 	* msgfilter.texi: Document --newline option.
