doc: Fix markup error in msgexec/msgfilter
* msgexec.texi, msgfilter.texi: Fix markup error caused by commit
96dde0b8 and a4d132f7.

--- a/gettext-tools/doc/msgexec.texi
+++ b/gettext-tools/doc/msgexec.texi
@@ -18,7 +18,7 @@ by a null byte.  The output of @samp{msgexec 0} is suitable as input for
 @samp{xargs -0}.
 
 @table @samp
-@itemx --newline
+@item --newline
 @opindex --newline@r{, @code{msgfilter} option}
 Add newline at the end of each input line.
 
