--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,8 @@
+2015-02-03  Daiki Ueno  <ueno@gnu.org>
+
+	* msgexec.texi, msgfilter.texi: Fix markup error caused by commit
+	96dde0b8 and a4d132f7.
+
 2015-01-29  Daiki Ueno  <ueno@gnu.org>
 
 	* msgexec.texi: Document --newline option.
