xgettext: Wrap location comments to 79 characters
Previously, messages wre wrapped to 79 characters, but location
comments were wrapped to 78 characters.
* gettext-tools/src/write-po.c (message_print_comment_filepos): Fix
off-by-one in calculating line-wrapping width of location comment.

* gettext-tools/tests/xgettext-13: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add new test.
* gettext-tools/tests/mm-viet.out: Adjust to the recent line-wrapping
behavior change.

--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,12 @@
+2015-02-05  Alex Henrie  <alexhenrie24@gmail.com>  (tiny change)
+
+	xgettext: Wrap location comments to 79 characters
+
+	Previously, messages were wrapped to 79 characters, but location
+	comments were wrapped to 78 characters.
+	* write-po.c (message_print_comment_filepos): Fix off-by-one in
+	calculating line-wrapping width of location comment.
+
 2015-02-03  Daiki Ueno  <ueno@gnu.org>
 
 	msgfilter: Factor out quoted string handling
