--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-02-06  Daiki Ueno  <ueno@gnu.org>
+
+	* THANKS: Update.
+
 2015-01-23  Daiki Ueno  <ueno@gnu.org>
 
 	build: Update libtool files to 2.4.5
