--- a/THANKS
+++ b/THANKS
@@ -33,6 +33,7 @@ Akim Demaille           akim@epita.fr
 Alain Bench             messtic@oreka.com
 Alain Guibert           derogaton+bggt@oreka.com, alguibert@free.fr
 Albert Chin-A-Young     china@thewrittenword.com
+Alex Henrie             alexhenrie24@gmail.com
 Alexander Potashev      aspotashev@gmail.com
 Alexander V. Lukyanov   lav@yars.free.net
 Alexander Turbov        AVTurbov@gwise.eltech.ru
