--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,10 @@
+2015-02-09  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext.texi (Plural forms): Add Arabic, Bahasa Indonesian, and
+	Thai.
+	Reported by Maryam Aly in:
+	<https://lists.gnu.org/archive/html/bug-gettext/2015-02/msg00012.html>.
+
 2015-02-03  Daiki Ueno  <ueno@gnu.org>
 
 	* msgexec.texi, msgfilter.texi: Fix markup error caused by commit
