--- a/THANKS
+++ b/THANKS
@@ -225,6 +225,7 @@ Martin Mokrejš          mmokrejs@natur.cuni.cz
 Martin Pitt             mpitt@debian.org
 Martin Quinson          martin.quinson@ens-lyon.fr
 Martin v. Löwis         martin@loewis.home.cs.tu-berlin.de
+Maryam Aly              maryam@foursquare.com
 Matt Dreezer            matthew.dreezer@edl.uk.eds.com
 Matthew McGillis        matthew@jenika.com
 Matthias Clasen         mclasen@redhat.com
@@ -232,6 +233,7 @@ Mattias Ellert          mattias.ellert@tsl.uu.se
 Matthias Kiefer         kiefer@kde.org
 Max de Mendizabal       max@acer.com.mx
 Michael C. Toren        mct@toren.net
+Michael Felt            aixtools@gmail.com
 Michael Opdenacker      m-opdenacker@ti.com
 Michael Schloh von Bennewitz  michael.schloh@cw.com
 Michael Stather         michaelstather@nuzi.de
@@ -271,6 +273,7 @@ Perry Smith             pedz@easesoftware.com
 Peter Breitenlohner     peb@mppmu.mpg.de
 Peter Eisentraut        peter@eisentraut.org
 Pierre                  pierre42d@9online.fr
+Philip Withnall         philip@tecnocode.co.uk
 Philipp Thomas          pthomas@suse.de
 Primoz Peterlin         primoz.peterlin@biofiz.mf.uni-lj.si
 Rafał Maszkowski        rzm@icm.edu.pl
