NEWS: Add 0.19.5 changes

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-03-04  Daiki Ueno  <ueno@gnu.org>
+
+	* NEWS: Add 0.19.5 changes.
+
 2015-02-10  Daiki Ueno  <ueno@gnu.org>
 
 	* THANKS: Update.
