format-kde: Recognize KUIT markup
Reported by Chusslove Illich in:
https://lists.gnu.org/archive/html/bug-gettext/2015-01/msg00017.html
* gettext-tools/src/format.h (formatstring_kde_kuit): New variable
declaration.
* gettext-tools/src/format.c (formatstring_parsers): Register
formatstring_kde_kuitas a format string parser.
* gettext-tools/src/format-kde-kuit.c: New file.
* gettext-tools/src/message.h (NFORMATS): Increment.
(enum format_type): New enum value format_kde_kuit.
* gettext-tools/src/xgettext.c (xgettext_record_flag): Handle
format_kde_kuit.
* gettext-tools/src/Makefile.am (xgettext_SOURCES): Move
libexpat-compat.c to...
(libgettextsrc_la_SOURCES): ...here.
(xgettext_LDADD): Move @LTLIBEXPAT@ to...
(libgettextsrc_la_LDFLAGS): ...here.
(FORMAT_SOURCE): Add format-kde-kuit.c.
* gettext-tools/libgettextpo/Makefile.am (libgettextpo_la_AUXSOURCES):
Add ../src/format-kde-kuit.c and ../src/libexpat-compat.c.
(libgettextpo_la_LDFLAGS): Add @LTLIBEXPAT@.
* gettext-tools/tests/format-kde-kuit-1: New file.
* gettext-tools/tests/format-kde-kuit-2: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add new tests.
* gettext-tools/doc/gettext.texi (kde-kuit-format): New subsection.
* NEWS: Mention KUIT format string support.

--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,11 @@ Version 0.19.5 - unreleased
   particularly improves "\N{...}" notation handling of xgettext for
   Perl and Python.
 
+* Programming languages support:
+  - C++ with KDE: xgettext and msgfmt can now recognize KUIT (KDE User
+    Interface Text) markup.  See the documentation section "KUIT
+    Format Strings" for more info.
+
 * Bug fixes:
   - xgettext C++11 raw string recognition is now stricter and don't
     accept unbalanced delimiters.
