--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-03-09  Daiki Ueno  <ueno@gnu.org>
+
+	* NEWS: Mention KUIT format string support.
+
 2015-03-04  Daiki Ueno  <ueno@gnu.org>
 
 	build: Update libtool files to 2.4.6
