--- a/gettext-tools/libgettextpo/ChangeLog
+++ b/gettext-tools/libgettextpo/ChangeLog
@@ -1,3 +1,9 @@
+2015-03-06  Daiki Ueno  <ueno@gnu.org>
+
+	* Makefile.am (libgettextpo_la_AUXSOURCES): Add
+	../src/format-kde-kuit.c and ../src/libexpat-compat.c.
+	(libgettextpo_la_LDFLAGS): Add @LTLIBEXPAT@.
+
 2014-12-24  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.4 released.
