hello-c-gnome3: Improve comment in Makefile.am
* hello-c-gnome3/Makefile.am: Suggest hello.desktop.in should be
included in EXTRA_DIST.

--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,3 +1,8 @@
+2015-03-06  Daiki Ueno  <ueno@gnu.org>
+
+	* hello-c-gnome3/Makefile.am: Suggest hello.desktop.in should be
+	included in EXTRA_DIST.
+
 2015-02-02  Matthias Clasen  <mclasen@redhat.com>
 
 	* hello-c-gnome3/configure.ac: Require gettext 0.19, for GSettings
