--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -1,3 +1,7 @@
+2015-03-09  Daiki Ueno  <ueno@gnu.org>
+
+	* POTFILES.in: Add format-kde.c and format-kde-kuit.c.
+
 2014-12-24  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.4 released.
