--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,8 @@
+2015-03-12  Daiki Ueno  <ueno@gnu.org>
+
+	* Makefile.am (sentence_CPPFLAGS): Add -I$(top_srcdir)/src and
+	$(AM_CPPFLAGS).
+
 2015-03-05  Daiki Ueno  <ueno@gnu.org>
 
 	* format-kde-kuit-1: New file.
