--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,9 @@
+2015-03-12  Daiki Ueno  <ueno@gnu.org>
+
+	* format-kde-kuit.c (format_parse): Remove dead assignment,
+	spotted by clang-analyzer.
+	* x-c.c (phase5_get): Likewise.
+
 2015-03-11  Daiki Ueno  <ueno@gnu.org>
 
 	msgunfmt: Check allocated size for static segment
