intl: Update from gnulib
* gettext-runtime/intl/localename.c, gettext-runtime/intl/vasnprintf.c:
Update from gnulib.
* gettext-runtime/libasprintf/vasnprintf.c: Update from gnulib.

--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,8 @@
+2015-03-12  Daiki Ueno  <ueno@gnu.org>
+
+	intl: Update from gnulib
+	* localename.c, vasnprintf.c: Update from gnulib.
+
 2015-01-22  Daiki Ueno  <ueno@gnu.org>
 
 	intl: Update from gnulib
