--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,7 @@
+2015-03-12  Daiki Ueno  <ueno@gnu.org>
+
+	* vasnprintf.c: Update from gnulib.
+
 2015-01-22  Daiki Ueno  <ueno@gnu.org>
 
 	* vasnprintf.c: Update copyright year.
