--- a/gettext-tools/doc/xgettext.texi
+++ b/gettext-tools/doc/xgettext.texi
@@ -427,7 +427,7 @@ This option has an effect only with the language C++.
 @cindex debugging messages marked as format strings
 Use the flags @code{c-format} and @code{possible-c-format} to show who was
 responsible for marking a message as a format string.  The latter form is
-used if the @code{xgettext} program decided, the format form is used if
+used if the @code{xgettext} program decided, the former form is used if
 the programmer prescribed it.
 
 By default only the @code{c-format} form is used.  The translator should
@@ -577,7 +577,7 @@ Set the reporting address for msgid bugs.  This is the email address or URL
 to which the translators shall report bugs in the untranslated strings:
 
 @itemize -
-@item Strings which are not entire sentences, see the maintainer guidelines
+@item Strings which are not entire sentences; see the maintainer guidelines
 in @ref{Preparing Strings}.
 @item Strings which use unclear terms or require additional context to be
 understood.
