--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-05-08  Daiki Ueno  <ueno@gnu.org>
+
+	* THANKS: Update.
+
 2015-03-09  Daiki Ueno  <ueno@gnu.org>
 
 	* NEWS: Mention KUIT format string support.
