--- a/THANKS
+++ b/THANKS
@@ -210,6 +210,7 @@ Lorenzo Gil Sanchez     lgs@sicem.biz
 Luke Schierer           lschiere@rackspace.com
 Maciej W. Rozycki       macro@ds2.pg.gda.pl
 Mads Martin Joergensen  mmj@suse.de
+Manuel Uberti           manuel@boccaperta.com
 Marc Prior              MarcPrior@compuserve.com
 Marcel Telka            marcel@telka.sk
 Marcus Daniels          marcus@sysc.pdx.edu
@@ -227,11 +228,13 @@ Martin Quinson          martin.quinson@ens-lyon.fr
 Martin v. Löwis         martin@loewis.home.cs.tu-berlin.de
 Maryam Aly              maryam@foursquare.com
 Matt Dreezer            matthew.dreezer@edl.uk.eds.com
+Matthew Behrens         askedrelic@gmail.com
 Matthew McGillis        matthew@jenika.com
 Matthias Clasen         mclasen@redhat.com
 Mattias Ellert          mattias.ellert@tsl.uu.se
 Matthias Kiefer         kiefer@kde.org
 Max de Mendizabal       max@acer.com.mx
+Max Lin                 mlin@suse.com
 Michael C. Toren        mct@toren.net
 Michael Felt            aixtools@gmail.com
 Michael Opdenacker      m-opdenacker@ti.com
