--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-05-08  Часлав Илић (Chusslove Illich)  <caslav.ilic@gmx.net>  (tiny change)
+
+	* NEWS: Mention --kde behavior change.
+
 2015-05-08  Daiki Ueno  <ueno@gnu.org>
 
 	* THANKS: Update.
