msginit: Guess plural rules from Unicode CLDR
* gettext-tools/src/Makefile.am (noinst_PROGRAMS): Add cldr-plurals.
(install-exec-local): Install cldr-plurals.
(BUILT_SOURCES): Add cldr-plural.c and cldr-plural.h.
(cldr_plural_SOURCES): New variable.
(cldr_plural_LDADD): New variable.
* gettext-tools/src/cldr-plural-exp.h: New file.
* gettext-tools/src/cldr-plural-exp.c: New file.
* gettext-tools/src/cldr-plural.y: New file.
* gettext-tools/src/cldr-plurals.c: New file.
* gettext-tools/src/msginit.c (plural_forms): Call cldr-plurals program
if the plural rule is not defined in the code.
* gettext-tools/doc/msginit.texi: More explanations about "meta
information".
* gettext-tools/doc/gettext.texi (Plural forms): Mention Unicode CLDR
support in msginit.
* gettext-tools/tests/cldr-plurals-1: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add new tests.
* NEWS: Mention msginit change.

--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,11 @@ Version 0.19.5 - unreleased
   particularly improves "\N{...}" notation handling of xgettext for
   Perl and Python.
 
+* msginit is now capable of generating "Plural-Forms:" from Unicode
+  CLDR, if the GETTEXTCLDRDIR environment variable is set to the
+  location of the data directory.  The actual conversion is done by a
+  new helper program 'cldr-plural'.
+
 * Programming languages support:
   - C++ with KDE: xgettext and msgfmt can now recognize KUIT (KDE User
     Interface Text) markup.  See the documentation section "KUIT
