--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,9 @@
+2015-06-01  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext.texi (Adjusting Files): Update link to GNU hello
+	distribution.  Suggested by Karl Berry in:
+	<https://lists.gnu.org/archive/html/bug-gettext/2015-05/msg00031.html>.
+
 2015-05-08  Matthew Behrens  <askedrelic@gmail.com>  (tiny change)
 
 	* gettext.texi (python-format): Update link to Python Library
