awk: Recognize .twjr file extension
* gettext-tools/src/x-awk.h (EXTENSIONS_AWK): Register file extensions
".gawk" and ".twjr".  Suggested by Karl Berry in:
<https://lists.gnu.org/archive/html/bug-gettext/2015-05/msg00032.html>.

* gettext-tools/doc/gettext.texi (gawk): Mention new file extensions
".gawk" and ".twjr".

--- a/gettext-tools/doc/gettext.texi
+++ b/gettext-tools/doc/gettext.texi
@@ -10683,7 +10683,9 @@ with a single-letter name.
 gawk 3.1 or newer
 
 @item File extension
-@code{awk}
+@code{awk}, @code{gawk}, @code{twjr}.
+The file extension @code{twjr} is used by TexiWeb Jr
+(@uref{https://github.com/arnoldrobbins/texiwebjr}).
 
 @item String syntax
 @code{"abc"}
