--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,5 +1,10 @@
 2015-06-01  Daiki Ueno  <ueno@gnu.org>
 
+	* gettext.texi (gawk): Mention new file extensions ".gawk" and
+	".twjr".
+
+2015-06-01  Daiki Ueno  <ueno@gnu.org>
+
 	* gettext.texi (Adjusting Files): Update link to GNU hello
 	distribution.  Suggested by Karl Berry in:
 	<https://lists.gnu.org/archive/html/bug-gettext/2015-05/msg00031.html>.
