--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,9 @@
+2015-06-01  Daiki Ueno  <ueno@gnu.org>
+
+	* x-awk.h (EXTENSIONS_AWK): Register file extensions ".gawk" and
+	".twjr".  Suggested by Karl Berry in:
+	<https://lists.gnu.org/archive/html/bug-gettext/2015-05/msg00032.html>.
+
 2015-05-08  Часлав Илић (Chusslove Illich)  <caslav.ilic@gmx.net>  (tiny change)
 
 	* x-c.c (init_flag_table_kde): New function.
